# secure-channel

secure-channel/: .gitignore  CMakeLists.txt  README.md
secure-channel/include/secure-channel/: common.hpp  crypto.hpp  encryption_engine.hpp  handshake.hpp  key_manager.hpp  network.hpp  record.hpp  vault.hpp
secure-channel/src/: crypto.cpp  encryption_engine.cpp  handshake.cpp  key_manager.cpp  network.cpp  record.cpp  vault.cpp
secure-channel/src/client/: client_handlers.cpp  main.cpp
secure-channel/src/server/: main.cpp  server_handlers.cpp
vault-api-bridge/: index.html  package-lock.json  package.json  server.js
